--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postcss": "^8.4.5"
   },
   "dependencies": {
+    "@gatsbyjs/reach-router": "^1.3.9",
     "@medusajs/medusa": "^1.3.4",
     "@radix-ui/react-accordion": "^0.1.6",
     "@radix-ui/react-avatar": "^0.1.3",
@@ -31,12 +32,15 @@
     "crypto-browserify": "^3.12.0",
     "emoji-picker-react": "^3.5.0",
     "gatsby": "^4.4.0",
+    "gatsby-link": "^4.20.0",
     "gatsby-plugin-create-client-paths": "^4.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-sharp": "^4.4.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-plugin-typescript": "^4.5.1",
+    "gatsby-react-router-scroll": "^5.20.0",
+    "gatsby-script": "^1.5.0",
     "gatsby-transformer-sharp": "^4.4.0",
     "immutability-helper": "^3.1.1",
     "iso8601-duration": "^1.3.0",
